# markoom

./: NOTICE  README.md  pyproject.toml  test_run.py
src/markoom/: __init__.py  core.py  exceptions.py  processing.py
src/markoom/data/: quran-simple-clean.xml  quran-uthmani-min.xml
