[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markoom"
version = "0.1.0"
authors = [
  { name="Your Name", email="your-email@example.com" },
]
description = "A Python library for numerical and textual analysis of the Holy Quran."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Topic :: Religion",
]
keywords = ["quran", "islam", "numerical analysis", "text processing", "arabic", "digital humanities"]

[project.urls]
"Homepage" = "https://github.com/your-username/markoom"
"Bug Tracker" = "https://github.com/your-username/markoom/issues"

# This section is crucial for including your XML data files in the package.
[tool.setuptools.package-data]
markoom = ["data/*.xml"]